<resources>
    <string name="app_name">CustomView_QMLibrary</string>
    <string name="action_settings">Settings</string>
    <string name="desc_image">Image</string>
    <string name="dialog_title">提示</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_yes">是</string>
    <string name="dialog_no">否</string>
    <string name="dialog_no_remind">不再提示</string>
    <string name="dialog_know">我知道了</string>
    <string name="dialog_to_buy">立即购买</string>
    <string name="dialog_loading_text">正在加载</string>
    <string name="dialog_update_download_title">软件版本更新</string>
    <string name="dialog_update_confirm">立即更新</string>
    <string name="dialog_update_cancel">以后再说</string>
    <string name="msg_app_repress_to_close">再按一次退出</string>
    <string name="msg_app_version_update_new">发现新版本，是否更新</string>
    <string name="msg_user_is_login_on_other_device">该用户已在其他设备上登录</string>
    <string name="msg_network_fail">网络连接失败，请检查您的网络设置</string>
    <string name="msg_permission_storage_denied">请允许获取存储权限</string>
    <string name="msg_permission_camera_denied_for_codescan">获取相机权限失败，无法进行扫描</string>
    <string name="msg_permission_camera_denied">请允许获取相机权限</string>
    <string name="msg_device_error">设备有故障，请联系客服</string>
    <string name="msg_message_delete">是否确认删除消息</string>
    <string name="msg_message_no_selected">请选择要删除的消息</string>
    <string name="msg_device_messages_delete_failure">故障消息删除失败</string>
    <string name="msg_message_mark_read">是否确认将选中的故障消息标记为已读</string>
    <string name="msg_delete_device">是否确认删除设备</string>
    <string name="msg_delete_device_failure">删除设备失败</string>
    <string name="msg_delete_attention">是否确认删除该用户</string>
    <string name="msg_delete_attention_failure">副控删除失败</string>
    <string name="msg_device_add_success">设备添加成功</string>
    <string name="msg_device_add_failure">设备添加失败</string>
    <string name="msg_input_nickname_is_null_for_userinfo">请输入长度为1-12位的昵称</string>
    <string name="msg_nickname_is_null">请输入长度为1-12位的昵称</string>
    <string name="msg_input_nickname_is_null_for_devicename">请输入长度为1-20位的昵称</string>
    <string name="msg_nickname_is_trim_start_or_end">昵称不能用空格开头和结尾</string>
    <string name="msg_device_rename_failure">修改设备名称备注失败</string>
    <string name="shop_title">飞科商城</string>
    <string name="mall_index_search_hint">剃须刀</string>
    <string name="mall_index_star">明星产品 </string>
    <string name="mall_index_new">新品上市</string>
    <string name="mall_index_hotsale">热卖产品</string>
    <string name="mall_index_discount">特价商品</string>
    <string name="mall_index_help">帮助中心</string>
    <string name="mall_index_support">服务支持</string>
    <string name="mall_index_guide">购物指南</string>
    <string name="mall_index_points">积分规则</string>
    <string name="mall_index_introduction">飞科介绍</string>
    <string name="mall_index_freight">配送支付</string>
    <string name="mall_index_warranty">保修政策</string>
    <string name="mall_index_news">飞科新闻</string>
    <string name="mall_msg_goods_not_on_sell">产品即将上线，敬请期待</string>
    <string name="device_title">我的设备</string>
    <string name="device_tips_not_login">您还未登录,请登录后添加并使用设备</string>
    <string name="device_tips_not_network">网络连接失败，请检查您的网络设置</string>
    <string name="device_tips_failure">数据加载失败，请重新加载</string>
    <string name="device_reload_device">重新加载</string>
    <string name="device_add_device">添加设备</string>
    <string name="device_click_to_try">点击试用</string>
    <string name="device_try_other_device">试用其他设备</string>
    <string name="device_item_category_cleaner">智能空气净化器</string>
    <string name="device_item_category_robot">智能扫地机器人</string>
    <string name="device_item_category_scales_health">蓝牙健康秤</string>
    <string name="device_item_category_scales_weight">蓝牙体重秤</string>
    <string name="device_item_status_online">在线</string>
    <string name="device_item_status_offline">不在线</string>
    <string name="device_default_name_cleaner">智能空气净化器</string>
    <string name="device_default_name_health_scales">智能健康秤</string>
    <string name="device_default_name_weight_scales">智能健康秤</string>
    <string name="device_default_name_robot">智能扫地机器人</string>
    <string name="device_default_name_nose_trimmer">鼻毛修剪器</string>
    <string name="device_default_name_humidifier">加湿器</string>
    <string name="device_setting_title">设置与管理</string>
    <string name="device_setting_ion">离子净化</string>
    <string name="device_setting_sensor">关机实时监测</string>
    <string name="device_setting_sound_cleaner">净化器按键声音</string>
    <string name="device_setting_filter">滤网管理</string>
    <string name="device_setting_manager">设备管理</string>
    <string name="device_setting_rename">设备名称备注</string>
    <string name="device_setting_device_error">设备故障消息</string>
    <string name="device_setting_reset_wifi">更换Wi-Fi</string>
    <string name="device_setting_update">固件升级</string>
    <string name="device_setting_private">隐私模式</string>
    <string name="device_setting_family">家庭</string>
    <string name="device_setting_target">目标</string>
    <string name="device_setting_manage">设备管理</string>
    <string name="device_setting_update_new">new</string>
    <string name="device_setting_share">分享</string>
    <string name="device_setting_unmatchdata">未匹配数据</string>
    <string name="device_setting_userinfo">个人信息</string>
    <string name="device_setting_weight_unit">体重单位</string>
    <string name="device_setting_sound">加湿器按键声音</string>
    <string name="device_management_title">设备管理</string>
    <string name="device_management_product_category_label">型　　　号：</string>
    <string name="device_management_product_mac_label">序　列　号：</string>
    <string name="device_management_product_wifissid">Wi－Fi名称：</string>
    <string name="device_management_product_qrcode">设备二维码：</string>
    <string name="device_management_attention_user">连接此设备的用户</string>
    <string name="device_management_attention_user_delete">删除</string>
    <string name="device_management_delete">删除设备</string>
    <string name="pop_device_qrcode_description">设备二维码</string>
    <string name="device_rename_title">设备名称备注</string>
    <string name="device_rename_confirm">确认</string>
    <string name="device_rename_hint">请输入您的设备名称备注</string>
    <string name="device_add_title">添加设备</string>
    <string name="device_add_tips">请打开设备电源并开始添加设备</string>
    <string name="device_add_scan">扫二维码添加</string>
    <string name="device_add_scan_error">飞科智能无法识别此二维码，请联系客服</string>
    <string name="device_add_scan_illegal">飞科智能无法识别此二维码</string>
    <string name="device_add_manual">手动添加</string>
    <string name="device_add_no_wifi">当前手机未连接Wi-Fi，请连接后重试</string>
    <string name="device_add_network_confirm">为保证连接成功，请确定当前的\nWi-Fi为2.4GHz频段</string>
    <string name="msg_add_device_success">设备添加成功</string>
    <string name="device_add_msg_reset_wifi_success">重置网络成功</string>
    <string name="code_scan_title">扫一扫</string>
    <string name="msg_default_status">将二维码放入框内，即可自动扫描</string>
    <string name="from_gallery">相册</string>
    <string name="light">闪光灯</string>
    <string name="msg_camera_framework_bug">请允许飞科智能访问您的摄像头</string>
    <string name="msg_code_scan_failure">扫描的图片中不包含二维码</string>
    <string name="msg_code_scan_ing">正在扫描...</string>
    <string name="add_ble_device_title700123">FH7001/2/3</string>
    <string name="add_ble_device_title700568">FH7005/6/8</string>
    <string name="add_ble_device_default_value">0.0</string>
    <string name="add_ble_device_default_unit">公斤</string>
    <string name="add_ble_device_tips">请站到秤上完成连接</string>
    <string name="add_ble_device_cancel">取消绑定</string>
    <string name="add_ble_device_tips2">已发现智能健康秤，请确认秤上显示的数值\n和下方数值相同，即可确认绑定</string>
    <string name="device_location_not_supported_cannot_scan">位置信息获取失败，无法进行添加设备</string>
    <string name="device_location_need_open_gps">添加设备需要定位服务，请打开GPS再试</string>
    <string name="device_location_not_supported_cannot_connect">位置信息获取失败，可能无法连接设备</string>
    <string name="device_ble_not_supported">Bluetooth Low Energy not supported on device</string>
    <string name="device_bluetooth_not_supported">Bluetooth not supported on device</string>
    <string name="add_ble_device_retry">重新查找</string>
    <string name="add_ble_device_confirm">确认绑定</string>
    <string name="add_ble_device_error_added">您已经添加过该设备</string>
    <string name="device_type_title">选择设备</string>
    <string name="local_device_title">已搜到设备</string>
    <string name="local_device_add_new_device">配置新设备</string>
    <string name="local_device_category">型　号：</string>
    <string name="local_device_mac">序列号：</string>
    <string name="local_device_add">添加</string>
    <string name="wifi_setting_title">连接Wi-Fi</string>
    <string name="wifi_setting_hint_wifi">请选择Wi-Fi</string>
    <string name="wifi_setting_hint_pwd">请输入手机当前连接Wi-Fi的密码</string>
    <string name="wifi_setting_next">下一步</string>
    <string name="wifi_setting_wifi_error">Wi-Fi连接异常，请连接后重试</string>
    <string name="wifi_setting_tipspage1_title_cleaner">连接设备</string>
    <string name="wifi_setting_tipspage1_title_robot">连接设备</string>
    <string name="wifi_setting_tipspage1_tips1">长按配网按键5秒开始配网</string>
    <string name="wifi_setting_tipspage1_confirm">连接设备</string>
    <string name="wifi_setting_tipspage2_title_cleaner">连接设备</string>
    <string name="wifi_setting_tipspage2_no">否</string>
    <string name="wifi_setting_tipspage2_yes">是</string>
    <string name="wifi_setting_loading_title">正在连接</string>
    <string name="wifi_setting_loading_ing">正在连接网络...</string>
    <string name="wifi_setting_success">设备配置成功，等待后续操作</string>
    <string name="wifi_setting_failure_router">连接路由器失败</string>
    <string name="wifi_setting_failure_verify">设备信息校验失败</string>
    <string name="wifi_setting_failure_server">连接服务器失败</string>
    <string name="wifi_setting_failure_reason_title">可能存在以下情况</string>
    <string name="wifi_setting_failure_reason_router">1、手机所连Wi-Fi未在2.4G频段下\n2、路由器密码输入错误\n3、路由器连接设备过多\n4、路由器距离手机或设备比较远\n5、设备没有进入配网模式（Wi-Fi灯没有闪烁）</string>
    <string name="wifi_setting_failure_reason_verify">1、设备型号选择错误\n2、设备二维码有误</string>
    <string name="wifi_setting_failure_reason_server">1、路由器连接设备过多\n2、路由器距离设备比较远\n3、路由器网络不稳定</string>
    <string name="wifi_setting_loading_cancel">取消连接</string>
    <string name="wifi_setting_loading_retry">重新连接</string>
    <string name="wifi_setting_loading_success_confirm">确认</string>
    <string name="wifi_setting_loading_device_unauthorized">设备无法识别，请联系客服</string>
    <string name="device_error_title">设备故障消息</string>
    <string name="device_error_tips_no_messages">当前设备无故障消息</string>
    <string name="device_error_edit">编辑</string>
    <string name="device_error_finish">完成</string>
    <string name="device_error_select_all">全选</string>
    <string name="device_error_cancel">取消</string>
    <string name="device_error_delete">删除</string>
    <string name="device_error_detail_title">故障详情</string>
    <string name="device_error_detail_msg_title">设备故障</string>
    <string name="device_error_detail_msg_content">设备故障，请联系客服。</string>
    <string name="device_card_title">设备名片</string>
    <string name="device_card_resetnetwork">配置网络</string>
    <string name="device_card_add">添加</string>
    <string name="cleaner_control_title">飞科智能空气净化器</string>
    <string name="cleaner_control_devicecity_city_default">--</string>
    <string name="cleaner_control_devicecity_aqi">室外空气指数</string>
    <string name="cleaner_control_devicecity_aqi_default">--</string>
    <string name="cleaner_control_devicecity_aqi_grade_default">--</string>
    <string name="cleaner_control_device_offline1">净化器不在线</string>
    <string name="cleaner_control_device_offline2">请检查净化器后重新连接</string>
    <string name="humidifier_control_title">飞科智能加湿器</string>
    <string name="humidifier_control_power_on">开机</string>
    <string name="humidifier_control_speed_one">一档</string>
    <string name="humidifier_control_timer">预约</string>
    <string name="humidifier_control_light_out">灯光熄灭</string>
</resources>