<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E4A93"
    tools:context="com.qm.customview_qmlibrary.FlycoHumidifierControlActivity">


    <com.qm.customview_qmlibrary.WaveView
        android:id="@+id/wave"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/humidifier_control_ll_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/humidifier_control_iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/desc_image"
                android:padding="10dp"
                android:src="@drawable/backward" />

            <TextView
                android:id="@+id/humidifier_control_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="14dp"
                android:singleLine="true"
                android:text="@string/humidifier_control_title"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/humidifier_control_iv_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/humidifier_control_iv_setting"
                android:contentDescription="@string/desc_image"
                android:padding="10dp"
                android:src="@drawable/share"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/humidifier_control_iv_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/desc_image"
                android:padding="10dp"
                android:src="@drawable/more" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/humidifier_control_ll_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:paddingBottom="28dp"
            android:visibility="visible">

            <RelativeLayout
                android:id="@+id/humidifier_control_ll_power"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/humidifier_control_iv_power"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/desc_image"
                    android:src="@drawable/humidifier_ctrl_power_off" />

                <TextView
                    android:id="@+id/humidifier_control_tv_power"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/humidifier_control_iv_power"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="17dp"
                    android:alpha="0.5"
                    android:text="@string/humidifier_control_power_on"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/humidifier_control_ll_speed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/humidifier_control_iv_speed"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/desc_image"
                    android:src="@drawable/humidifier_ctrl_speed_off_one" />

                <TextView
                    android:id="@+id/humidifier_control_tv_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/humidifier_control_iv_speed"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="17dp"
                    android:alpha="0.5"
                    android:text="@string/humidifier_control_speed_one"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/humidifier_control_ll_timer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/humidifier_control_iv_timer"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/desc_image"
                    android:src="@drawable/humidifier_ctrl_timer_off" />

                <TextView
                    android:id="@+id/humidifier_control_tv_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/humidifier_control_iv_timer"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="17dp"
                    android:alpha="0.5"
                    android:text="@string/humidifier_control_timer"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/humidifier_control_ll_light"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/humidifier_control_iv_light"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/desc_image"
                    android:src="@drawable/humidifier_ctrl_light_off_out" />

                <TextView
                    android:id="@+id/humidifier_control_tv_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/humidifier_control_iv_light"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="17dp"
                    android:alpha="0.5"
                    android:text="@string/humidifier_control_light_out"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/humidifier_control_ll_l"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/humidifier_control_iv_l"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/desc_image"
                    android:src="@drawable/humidifier_ctrl_light_off_out" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/humidifier_control_iv_l"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="17dp"
                    android:alpha="0.5"
                    android:text="@string/humidifier_control_light_out"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
